// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - BackEndRolePage renders correctly for /backend path 1`] = `
<Page
  title="Back End Developer"
>
  <RoleBar
    label="Back End Developer"
  />
  <Section>
    <RoleContent>
      <QuoteBubble
        noCopyToClipboard={true}
        variant="thought"
      />
      <Robot
        pose="default"
      />
    </RoleContent>
  </Section>
  <ActionButtons
    role="backend"
  />
</Page>
`;

exports[`COMPONENT - BackEndRolePage renders correctly for /backend/brag path 1`] = `
<Page
  title="Back End Developer"
>
  <RoleBar
    label="Back End Developer"
  />
  <Section>
    <RoleContent>
      <QuoteBubble
        quote="Yesterday I was implementing PUT method for missing RESTful API endpoint with complex database transations. Also added experimental fundamental interface. I think we are missing some good ol' lorem ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit..."
      />
      <Robot
        pose="brag"
      />
    </RoleContent>
  </Section>
  <ActionButtons
    role="backend"
  />
</Page>
`;

exports[`COMPONENT - BackEndRolePage renders correctly for /backend/confess path 1`] = `
<Page
  title="Back End Developer"
>
  <RoleBar
    label="Back End Developer"
  />
  <Section>
    <RoleContent>
      <QuoteBubble
        quote="Yesterday I was implementing PUT method for missing RESTful API endpoint."
      />
      <Robot
        pose="confess"
      />
    </RoleContent>
  </Section>
  <ActionButtons
    role="backend"
  />
</Page>
`;
